--- a/index.html
+++ b/index.html
@@ -4,10 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="script.js" defer></script>
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    
+    <div class="wrapperdiv">
+        <div class="rps-header">
+            <h2>Choose Rock, Paper or Scissors:</h2>
+        </div>
+        <div class="selection-container">
+            <div>
+                <label for="player-selection">Player:</label>
+                <input id="player-selection" type="text" readonly>
+            </div>
+            <div>
+                <label for="computer-selection">Computer:</label>
+                <input id="computer-selection" type="text" readonly>
+            </div>
+        </div>
+        <div class="summary-container">
+            <input id="result-output" type="text" readonly>
+        </div>
+        <div class="buttons-container">
+            <button id="rock" type="button" class="btn">Rock</button>
+            <button id="paper" type="button" class="btn">Paper</button>
+            <button id="scissors" type="button" class="btn">Scissors</button>
+        </div>
+    </div>
 </body>
-<script type="text/javascript" src="script.js"></script>
 </html>
