--- a/index.html
+++ b/index.html
@@ -33,5 +33,8 @@
             <div class="computer-score">COMPUTER: <span>0</span></div>
         </div>
     </div>
+
+    <audio id="audio-click" src="tink.wav"></audio>
+    <audio id="audio-win" src="sounds/wining-sound.wav"></audio>
 </body>
 </html>
